--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="nav container">
-            <div class="navdiv marl" id="navdiv1">
+            <div class="navdiv marginLeft" id="navdiv1">
                 <p><a href="#">Luxterior</a></p>
             </div>
             <div class="navdiv" id="navdiv2">
@@ -25,7 +25,7 @@
                     <li class="navdivli"><a href="#">Contacts</a></li>
                 </ul>
             </div>
-            <div class="navdiv marr" id="navdiv3">
+            <div class="navdiv marginRight" id="navdiv3">
                 <a href="#" title="search icons"><img src="images/search-interface-symbol.png" alt="search icon"></a>
                 <a href="#" title="menu icons"><img src="images/menu.png" alt="menu icon"></a>
             </div>
@@ -43,13 +43,13 @@
                 <img id="livingroom" src="images/livingroom.jpg" alt="livingroom">
                 <div id="emptybox"></div>
                 <div class="downarrow">
-                    <a href="#"><i class="fa-solid fa-arrow-down" style="color: #ffffff;"></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down iconcolor""></i></a>
                 </div>
 
             </div>
             <div class="bannerdiv" id="bannerdiv3">
-                <i class="fa-solid fa-caret-up" style="color: #5a6e79;"></i>
-                <i class="fa-solid fa-caret-down" style="color: #5a6e79;"></i>
+                <i class="fa-solid fa-caret-up iconcolorprimary"></i>
+                <i class="fa-solid fa-caret-down iconcolorprimary"></i>
                 <p id="zero_one">01</p>
                 <div class="bannerline"></div>
                 <p>06</p>
@@ -59,13 +59,13 @@
 
         <section class="section2 container">
             <div class="heading">
-                <div class="headingline marl"></div>
+                <div class="headingline marginLeft"></div>
                 <h2 class="h1heading">benefits you get when using our services</h2>
             </div>
-            <div class="info marl marr">
+            <div class="info marginLeft marginRight">
                 <div class="infodetail" id="infodetail1">
                     <div class="headingicon">
-                        <img src="images/star.png" alt="star">
+                        <img class="staricon" src="images/star.png" alt="star">
                     </div>
                     <div class="headingtext">
                         <div class="insideheading">
@@ -80,8 +80,8 @@
 
                 </div>
                 <div class="infodetail" id="infodetail2">
-                    <div class="headingicon">
-                        <img src="images/truck.png" alt="truck">
+                    <div class="headingicon truckicon">
+                        <img  src="images/truck.png" alt="truck">
 
                     </div>
                     <div class="headingtext">
@@ -98,7 +98,7 @@
                 </div>
                 <div class="infodetail" id="infodetail3">
                     <div class="headingicon">
-                        <img src="images/tick.png" alt="tick">
+                        <img class="tickicon" src="images/tick.png" alt="tick">
 
                     </div>
                     <div class="headingtext">
@@ -119,31 +119,31 @@
 
         <section class="section3 container">
             <div class="about" id="about1">
-                <img class="marl" src="images/wall.jpg" alt="Wall image">
+                <img class="marginLeft" src="images/wall.jpg" alt="Wall image">
             </div>
             <div class="about" id="about2">
-                <div class="about2detail marr" id="aboutdetail1">
+                <div class="about2detail marginRight" id="aboutdetail1">
                     <h2>We provide you the best experience</h2>
                 </div>
-                <div class="about2detail marr" id="aboutdetail2">
+                <div class="about2detail marginRight" id="aboutdetail2">
                     <p>You dont worry avout result because all of these interors are made by people who are
                         professionals in their fiels with an elegant and luxurious style and with premium quality materials. </p>
                 </div>
-                <div class="about2detail marr" id="aboutdetail3">
+                <div class="about2detail marginRight" id="aboutdetail3">
                     <div class="numberdetail" id="numberdetail1">
-                        <h1>17</h1>
+                        <h6>17</h6>
                         <p>Years of experience</p>
                     </div>
                     <div class="numberdetail" id="numberdetail2">
-                        <h1>85</h1>
+                        <h6>85</h6>
                         <p>Award gained</p>
                     </div>
                     <div class="numberdetail" id="numberdetail3">
-                        <h1>537</h1>
+                        <h6>537</h6>
                         <p>Furnitures sold</p>
                     </div>
                 </div>
-                <div class="about2detail marr" id="aboutdetail4">
+                <div class="about2detail marginRight" id="aboutdetail4">
                     <a href="#">Learn more</a>
                     <i class="fa-solid fa-arrow-right btnarrow"></i>
 
@@ -152,9 +152,9 @@
             </div>
         </section>
         <section class="section4 container">
-            <div class="feature marl" id="feature1">
+            <div class="feature marginLeft" id="feature1">
                 <div class="featureheading">
-                    <h1>We provide the best process experience </h1>
+                    <h2>We provide the best process experience </h2>
                 </div>
                 <div class="featurecontent">
                     <div class="content" id="content1">
@@ -196,40 +196,40 @@
             </div>
 
 
-            <div class="feature marr" id="feature2">
-                <img src="/images/hall.jpg" alt="hall">
+            <div class="feature marginRight" id="feature2">
+                <img src="images/hall.jpg" alt="hall">
             </div>
         </section>
 
         <section class="section5 container">
             <div class="review" id="reviewheading">
                 <div class="reviewsubheading">
-                    <h1 class="marl">We our customers are saying</h1>
+                    <h2 class="marginLeft">We our customers are saying</h2>
                 </div>
-                <div class="reviewsubheadingarrow marr">
-                    <i class="fa-solid fa-arrow-left" style="color: #76797f;"></i>
+                <div class="reviewsubheadingarrow marginRight">
+                    <i class="fa-solid fa-arrow-left iconcolorprimary" ></i>
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
             <div class="review" id="reviewcontent">
-                <div class="reviewinsidecontent marl" id="reviewinsidecontent1">
-                    <i class="fa-solid fa-quote-left" style="color: #ffffff;"></i>
+                <div class="reviewinsidecontent marginLeft" id="reviewinsidecontent1">
+                    <i class="fa-solid fa-quote-left iconcolor iconcolor" ></i>
                     <h3>The result given are very satisfying</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ipsum possimus ut soluta, exercitationem, obcaecati fugiat error nisi molestias magni aut vita</p>
                     <div class="userid">
-                        <i class="fa-solid fa-user"></i>
+                        <img src="images/sreerag.jpg" alt="userimage">
                         <div class="username">
                             <h4>Ralph Edwards</h4>
                             <p>Product manager</p>
                         </div>
                     </div>
                 </div>
-                <div class="reviewinsidecontent marr" id="reviewinsidecontent2">
-                    <i class="fa-solid fa-quote-left" style="color: #ffffff;"></i>
+                <div class="reviewinsidecontent marginRight" id="reviewinsidecontent2">
+                    <i class="fa-solid fa-quote-left iconcolor" ></i>
                     <h3>The service provided is very good and friendly</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ipsum possimus ut soluta, exercitationem, obcaecati fugiat error nisi molestias magni aut vita</p>
                     <div class="userid">
-                        <i class="fa-solid fa-user"></i>
+                        <img src="images/sreerag.jpg" alt="userimage">
                         <div class="username">
                             <h4>Lustle Aleksander</h4>
                             <p>Product manager</p>
@@ -250,7 +250,7 @@
                 </div>
             </div>
             <div class="footer" id="footer2">
-                <div class="footerdetail marl" id="footerdetail1">
+                <div class="footerdetail marginLeft" id="footerdetail1">
                     <h4>Luxterior</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum accusantium ipsam neque commodi </p>
                 </div>
@@ -276,14 +276,14 @@
                     <a href="#">Courses</a>
                     <a href="#">Accecibility</a>
                 </div>
-                <div class="footerdetail marr" id="footerdetail5">
+                <div class="footerdetail marginRight" id="footerdetail5">
                     <h5>Get in touch</h5>
                     <a href="#">About us</a>
                     <a href="#">Feature</a>
                     <div class="socialicons">
-                        <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
-                        <i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i>
-                        <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+                        <i class="fa-brands fa-instagram iconcolor" ></i>
+                        <i class="fa-brands fa-facebook-f iconcolor" ></i>
+                        <i class="fa-brands fa-twitter iconcolor"></i>
                     </div>
                 </div>
             </div>
