removed some errors

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <nav class="nav container">
-            <div class="navdiv marginLeft" id="navdiv1">
+            <div class="navdiv marginLeft" id="navname">
                 <p><a href="#">Luxterior</a></p>
             </div>
-            <div class="navdiv" id="navdiv2">
+            <div class="navdiv" id="navoptions">
                 <ul class="navdivul">
                     <li class="navdivli"><a href="#">Home</a></li>
                     <li class="navdivli"><a href="#">About</a></li>
@@ -23,7 +23,7 @@
                     <li class="navdivli"><a href="#">Contacts</a></li>
                 </ul>
             </div>
-            <div class="navdiv marginRight" id="navdiv3">
+            <div class="navdiv marginRight" id="navicons">
                 <a href="#" title="search icons"><img src="images/search-interface-symbol.png" alt="search icon"></a>
                 <a href="#" title="menu icons"><img src="images/menu.png" alt="menu icon"></a>
             </div>
@@ -31,19 +31,19 @@
     </header>
     <main>
         <section class="section1 container">
-            <div class="bannerdiv" id="bannerdiv1">
+            <div class="bannerdiv" id="bannertext">
                 <h1>We help you make modern interior</h1>
                 <p>We will help you to make on elegant and beautiful interior designed by professional interior designer
                 </p>
             </div>
-            <div class="bannerdiv" id="bannerdiv2">
+            <div class="bannerdiv" id="bannerimage">
                 <img id="livingroom" src="images/livingroom.jpg" alt="livingroom">
                 <div id="emptybox"></div>
                 <div class="downarrow">
-                    <a href="#"><i class="fa-solid fa-arrow-down iconcolor""></i></a>
+                    <a href="#"><i class="fa-solid fa-arrow-down iconcolor"></i></a>
                 </div>
             </div>
-            <div class="bannerdiv" id="bannerdiv3">
+            <div class="bannerdiv" id="bannersideline">
                 <i class="fa-solid fa-caret-up iconcolorprimary"></i>
                 <i class="fa-solid fa-caret-down iconcolorprimary"></i>
                 <p id="zero_one">01</p>
@@ -180,8 +180,8 @@
             </div>
         </section>
 
-        <section class="section5 container">
-            <div class="review" id="reviewheading">
+        <section class="section5">
+            <div class="review container" id="reviewheading">
                 <div class="reviewsubheading">
                     <h2 class="marginLeft">We our customers are saying</h2>
                 </div>
@@ -190,7 +190,7 @@
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
-            <div class="review" id="reviewcontent">
+            <div class="review container" id="reviewcontent">
                 <div class="reviewinsidecontent marginLeft" id="reviewinsidecontent1">
                     <i class="fa-solid fa-quote-left iconcolor iconcolor" ></i>
                     <h3>The result given are very satisfying</h3>
