update before resubmission

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>HTML_CSS_Assignment_4</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   
 </head>
 
 <body>
@@ -146,7 +147,7 @@
                 </div>
                 <div class="about2detail marginRight" id="aboutdetail4">
                     <a href="#">Learn more</a>
-                    <img class="btnarrow" src="images/right-arrow (1).png" alt="right arrow">
+                    <img src="images/right-arrow.png" alt="right arrow" class="btnarrow">
                 </div>
             </div>
         </section>
