--- a/index.html
+++ b/index.html
@@ -156,39 +156,22 @@
                     <h2>We provide the best process experience </h2>
                 </div>
                 <div class="featurecontent">
-                    <div class="content" id="content1">
-                        <div class="insidecontenthead">
-                            <div class="roundnumber">
-                                <p>01</p>
-                            </div>
-                            <div class="numberline"></div>
-                        </div>
-                        <div class="insidecontentbody">
+                    <div class=" time_line">
+                        <div class="timeline_content">
                             <h3>Briefing</h3>
                             <p>First thing you determine the concept and model you want, then choose what color and
                                 materials you want to use in your furniture.</p>
-                        </div>
+                        </div>     
                     </div>
-                    <div class="content" id="content2">
-                        <div class="insidecontenthead">
-                            <div class="roundnumber">
-                                <p>02</p>
-                            </div>
-                            <div class="numberline"></div>
-                        </div>
-                        <div class="insidecontentbody">
+                    <div class=" time_line">
+                        <div class="timeline_content">
                             <h3>Processing</h3>
                             <p>When the breiefing process is completed and what the client wants has been achieved. Then
-                                we carry out the execution of the delivery concept.</p>
+                                we carry out the execution of the delivery concept.</p>   
                         </div>
                     </div>
-                    <div class="content" id="content3">
-                        <div class="insidecontenthead">
-                            <div class="roundnumber">
-                                <p>03</p>
-                            </div>
-                        </div>
-                        <div class="insidecontentbody">
+                    <div class=" time_line">
+                        <div class="timeline_content">
                             <h3>Finishing</h3>
                             <p>After the process is completed, we will immediately carry out the finishing stage and we
                                 do it carefully and make sure there are no mistake.</p>
@@ -251,6 +234,7 @@
                 <a href="#">Subscribe</a>
             </div>
         </div>
+    </section>
         <footer>
             <div class="footer container" id="footer2">
                 <div class="footerdetail marginLeft" id="footerdetail1">
@@ -291,8 +275,6 @@
                     </div>
                 </div>
             </div>
-
         </footer>
-    </section>
 </body>
 </html>
