added zero before counters

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header class="container">
-        <nav class="nav">
+    <header>
+        <nav class="nav container">
             <div class="navdiv marginLeft" id="navname">
                 <p><a href="#">Luxterior</a></p>
             </div>
@@ -44,7 +44,6 @@
                             <li class="navdivli slideinup"><a href="#contact">Contacts</a></li>
                         </ul>
                     </div>
-
                 </div>
             </div>
         </nav>
