--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
-
 <body>
     <header>
         <nav class="nav container">
@@ -26,7 +25,6 @@
                     <li class="navdivli"><a href="#contact">Contacts</a></li>
                 </ul>
             </div>
-
             <div class="navdiv marginRight" id="navicons">
                 <a href="#" class="search_image" title="search icons"><img src="images/search-interface-symbol.png"
                         alt="search icon"></a>
@@ -47,24 +45,24 @@
         </nav>
     </header>
     <main>
-        <section class="section1 container" id="home">
-            <div class="bannerdiv " id="bannertext">
-                <h1 class="fade">We help you make modern interior</h1>
-                <p class="fade">We will help you to make on elegant and beautiful interior designed by professional interior designer
-                </p>
-            </div>
+        <section class="section1 " id="home">
             <div class="bannerdiv" id="bannerimage">
+                <div class="bannerdiv " id="bannertext">
+                    <h1 class="fade">We help you make modern interior</h1>
+                    <p class="fade">We will help you to make on elegant and beautiful interior designed by professional interior designer
+                    </p>
+                </div>
                 <div id="emptybox"></div>
                 <div class="downarrow slideinright">
                     <a href="#"><i class="fa-solid fa-arrow-down iconcolor"></i></a>
                 </div>
-            </div>
-            <div class="bannerdiv" id="bannersideline">
-                <i class="fa-solid fa-caret-up iconcolorprimary"></i>
-                <i class="fa-solid fa-caret-down iconcolorprimary"></i>
-                <p id="zero_one">01</p>
-                <div class="bannerline"></div>
-                <p>06</p>
+                <div class="bannerdiv" id="bannersideline">
+                    <i class="fa-solid fa-caret-up iconcolorprimary"></i>
+                    <i class="fa-solid fa-caret-down iconcolorprimary"></i>
+                    <p id="zero_one">01</p>
+                    <div class="bannerline"></div>
+                    <p>06</p>
+                </div>
             </div>
         </section>
         <section class="section2 container">
