--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <a href="#"><i class="fa-solid fa-arrow-down iconcolor"></i></a>
                 </div>
                 <div class="bannerdiv" id="bannersideline">
-                    <i class="fa-solid fa-caret-up iconcolorprimary"></i>
-                    <i class="fa-solid fa-caret-down iconcolorprimary"></i>
+                    <a href="#"><i class="fa-solid fa-caret-up iconcolorprimary"></i></a>
+                    <a href="#"><i class="fa-solid fa-caret-down iconcolorprimary"></i></a>
                     <p id="zero_one">01</p>
                     <div class="bannerline"></div>
                     <p>06</p>
