--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
     <header>
         <nav class="nav container">
-            <div class="navdiv marginLeft" id="navname">
+            <div class="navcontent marginLeft" id="navname">
                 <p><a href="#">Luxterior</a></p>
             </div>
-            <div class="navdiv" id="navoptions">
-                <ul class="navdivul">
-                    <li class="navdivli "><a href="#home">Home</a></li>
-                    <li class="navdivli "><a href="#about">About</a></li>
-                    <li class="navdivli "><a href="#feature">Feature</a></li>
-                    <li class="navdivli"><a href="#contact">Contacts</a></li>
+            <div class="navcontent" id="navoptions">
+                <ul class="navcontentul">
+                    <li class="navcontentli "><a href="#home">Home</a></li>
+                    <li class="navcontentli "><a href="#about">About</a></li>
+                    <li class="navcontentli "><a href="#feature">Feature</a></li>
+                    <li class="navcontentli"><a href="#contact">Contacts</a></li>
                 </ul>
             </div>
-            <div class="navdiv marginRight" id="navicons">
+            <div class="navcontent marginRight" id="navicons">
                 <a href="#" class="search_image" title="search icons"><img src="images/search-interface-symbol.png"
                         alt="search icon"></a>
                 <a href="#" class="menu_image" title="menu icons"><img src="images/menu.png" alt="menu icon"></a>
@@ -34,10 +34,10 @@
                     <label for="menu_checkbox" class="menu_icon"><i class="fas fa-bars"></i></label>
                     <div class="dropdown_items">
                         <ul>
-                            <li class="navdivli slideinup"><a href="#home">Home</a></li>
-                            <li class="navdivli slideinup "><a href="#about">About</a></li>
-                            <li class="navdivli slideinup"><a href="#feature">Feature</a></li>
-                            <li class="navdivli slideinup"><a href="#contact">Contacts</a></li>
+                            <li class="navcontentli slideinup"><a href="#home">Home</a></li>
+                            <li class="navcontentli slideinup "><a href="#about">About</a></li>
+                            <li class="navcontentli slideinup"><a href="#feature">Feature</a></li>
+                            <li class="navcontentli slideinup"><a href="#contact">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
         </nav>
     </header>
     <main>
-        <section class="section1 " id="home">
+        <section class="home" id="home">
             <div class="bannerdiv" id="bannerimage">
                 <div class="bannerdiv " id="bannertext">
                     <h1 class="fade">We help you make modern interior</h1>
@@ -65,58 +65,62 @@
                 </div>
             </div>
         </section>
-        <section class="section2 container">
-            <div class="heading">
-                <div class="headingline marginLeft"></div>
-                <h2 class="h1heading">benefits you get when using our services</h2>
+        <section class="benifit">
+            <div class="container">
+                <div class="heading">
+                    <div class="headingline marginLeft"></div>
+                    <h2 class="h1heading">benefits you get when using our services</h2>
+                </div>
+                <div class="marginLeft info marginRight">
+                    <div class="infodetail" id="infodetail1">
+                        <div class="headingicon">
+                            <img class="staricon" src="images/star.png" alt="star">
+                        </div>
+                        <div class="headingtext">
+                            <div class="insideheading">
+                                <h3>Best Quality</h3>
+                            </div>
+                            <div class="insidedetail">
+                                <p>All of our products uses the best materials and for our customers.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="infodetail" id="infodetail2">
+                        <div class="headingicon truckicon">
+                            <img src="images/truck.png" alt="truck">
+                        </div>
+                        <div class="headingtext">
+                            <div class="insideheading">
+                                <h3>Free Shipping</h3>
+                            </div>
+                            <div class="insidedetail">
+                                <p>Free shipping everytime you buy products from us without exception</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="infodetail" id="infodetail3">
+                        <div class="headingicon">
+                            <img class="tickicon" src="images/tick.png" alt="tick">
+                        </div>
+                        <div class="headingtext">
+                            <div class="insideheading">
+                                <h3>Warranty</h3>
+                            </div>
+                            <div class="insidedetail">
+                                <p>Every time you buy our furniture products, you will get a warranty without exception</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="marginLeft info marginRight">
-                <div class="infodetail" id="infodetail1">
-                    <div class="headingicon">
-                        <img class="staricon" src="images/star.png" alt="star">
-                    </div>
-                    <div class="headingtext">
-                        <div class="insideheading">
-                            <h3>Best Quality</h3>
-                        </div>
-                        <div class="insidedetail">
-                            <p>All of our products uses the best materials and for our customers.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="infodetail" id="infodetail2">
-                    <div class="headingicon truckicon">
-                        <img src="images/truck.png" alt="truck">
-                    </div>
-                    <div class="headingtext">
-                        <div class="insideheading">
-                            <h3>Free Shipping</h3>
-                        </div>
-                        <div class="insidedetail">
-                            <p>Free shipping everytime you buy products from us without exception</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="infodetail" id="infodetail3">
-                    <div class="headingicon">
-                        <img class="tickicon" src="images/tick.png" alt="tick">
-                    </div>
-                    <div class="headingtext">
-                        <div class="insideheading">
-                            <h3>Warranty</h3>
-                        </div>
-                        <div class="insidedetail">
-                            <p>Every time you buy our furniture products, you will get a warranty without exception</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </section>
-        <section class="section3 container" id="about">
-            <div class="about" id="about1">
+        <section class="about" id="about">
+           <div class="mainabout container">
+            <div id="about1">
                 <img class="marginLeft" src="images/wall.jpg" alt="Wall image">
             </div>
-            <div class="about" id="about2">
+            <div id="about2">
                 <div class="about2detail marginRight" id="aboutdetail1">
                     <h2>We provide you the best experience</h2>
                 </div>
@@ -144,43 +148,46 @@
                     <img src="images/right-arrow.png" alt="right arrow" class="btnarrow">
                 </div>
             </div>
+           </div>
         </section>
-        <section class="section4 container" id="feature">
-            <div class="feature marginLeft" id="feature1">
-                <div class="featureheading">
-                    <h2>We provide the best process experience </h2>
-                </div>
-                <div class="featurecontent">
-                    <div class=" time_line">
-                        <div class="timeline_content">
-                            <h3>Briefing</h3>
-                            <p>First thing you determine the concept and model you want, then choose what color and
-                                materials you want to use in your furniture.</p>
-                        </div>     
+        <section class="feature" id="feature">
+            <div class="mainfeature container">
+                <div class="marginLeft" id="feature1">
+                    <div class="featureheading">
+                        <h2>We provide the best process experience </h2>
                     </div>
-                    <div class=" time_line">
-                        <div class="timeline_content">
-                            <h3>Processing</h3>
-                            <p>When the breiefing process is completed and what the client wants has been achieved. Then
-                                we carry out the execution of the delivery concept.</p>   
+                    <div class="featurecontent">
+                        <div class=" time_line">
+                            <div class="timeline_content">
+                                <h3>Briefing</h3>
+                                <p>First thing you determine the concept and model you want, then choose what color and
+                                    materials you want to use in your furniture.</p>
+                            </div>     
+                        </div>
+                        <div class=" time_line">
+                            <div class="timeline_content">
+                                <h3>Processing</h3>
+                                <p>When the breiefing process is completed and what the client wants has been achieved. Then
+                                    we carry out the execution of the delivery concept.</p>   
+                            </div>
+                        </div>
+                        <div class=" time_line">
+                            <div class="timeline_content">
+                                <h3>Finishing</h3>
+                                <p>After the process is completed, we will immediately carry out the finishing stage and we
+                                    do it carefully and make sure there are no mistake.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class=" time_line">
-                        <div class="timeline_content">
-                            <h3>Finishing</h3>
-                            <p>After the process is completed, we will immediately carry out the finishing stage and we
-                                do it carefully and make sure there are no mistake.</p>
-                        </div>
-                    </div>
                 </div>
-            </div>
-            <div class="feature marginRight" id="feature2">
-                <img src="images/hall.jpg" alt="hall">
+                <div class="marginRight" id="feature2">
+                    <img src="images/hall.jpg" alt="hall">
+                </div>
             </div>
         </section>
 
-        <section class="section5 container">
-            <div class="review" id="reviewheading">
+        <section class="testimonials">
+            <div class="review container" id="reviewheading">
                 <div class="reviewsubheading">
                     <h2 class="marginLeft">We our customers are saying</h2>
                 </div>
@@ -218,18 +225,18 @@
                 </div>
             </div>
         </section>
-    </main>
-    <section class="section6 " id="contact">
-        <div class="footer container" id="footer1">
-            <h2>Subscribe to get the latest news about us</h2>
-            <p>We recomment you to subscribe to our newspaper, enter your email below to get our daily update about
-                us.</p>
-            <div class="subscribebtn">
-                <input type="email" placeholder="Enter your email">
-                <a href="#">Subscribe</a>
-            </div>
-        </div>
-    </section>
+        <section class="contact" id="contact">
+            <div class="footer container" id="footer1">
+                <h2>Subscribe to get the latest news about us</h2>
+                <p>We recomment you to subscribe to our newspaper, enter your email below to get our daily update about
+                    us.</p>
+                    <div class="subscribebtn">
+                        <input type="email" placeholder="Enter your email">
+                        <a href="#">Subscribe</a>
+                    </div>
+                </div>
+            </section>
+        </main>
         <footer>
             <div class="footer container" id="footer2">
                 <div class="footerdetail marginLeft" id="footerdetail1">
