commit after some updation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML_CSS_Assignment_4</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
@@ -15,7 +18,7 @@
     <header>
         <nav class="nav container">
             <div class="navcontent marginLeft" id="navname">
-                <p><a href="#">Luxterior</a></p>
+                <p><a href="#" class="luxterior">Luxterior</a></p>
             </div>
             <div class="navcontent" id="navoptions">
                 <ul class="navcontentul">
@@ -45,23 +48,25 @@
         </nav>
     </header>
     <main>
-        <section class="home" id="home">
-            <div class="bannerdiv" id="bannerimage">
-                <div class="bannerdiv " id="bannertext">
-                    <h1 class="fade">We help you make modern interior</h1>
-                    <p class="fade">We will help you to make on elegant and beautiful interior designed by professional interior designer
-                    </p>
-                </div>
-                <div id="emptybox"></div>
-                <div class="downarrow slideinright">
-                    <a href="#"><i class="fa-solid fa-arrow-down iconcolor"></i></a>
-                </div>
-                <div class="bannerdiv" id="bannersideline">
-                    <a href="#"><i class="fa-solid fa-caret-up iconcolorprimary"></i></a>
-                    <a href="#"><i class="fa-solid fa-caret-down iconcolorprimary"></i></a>
-                    <p id="zero_one">01</p>
-                    <div class="bannerline"></div>
-                    <p>06</p>
+        <section class="home">
+            <div class="container">
+                <div class="bannerdiv marginRight" id="bannerimage">
+                    <div class="bannerdiv " id="bannertext">
+                        <h1>We help you make modern interior</h1>
+                        <p>We will help you to make on elegant and beautiful interior designed by professional interior designer
+                        </p>
+                    </div>
+                    <div id="emptybox"></div>
+                    <div class="downarrow slideinright">
+                        <a href="#"><i class="fa-solid fa-arrow-down iconcolor"></i></a>
+                    </div>
+                    <div class="bannerdiv" id="bannersideline">
+                        <a href="#"><i class="fa-solid fa-caret-up iconcolorprimary"></i></a>
+                        <a href="#"><i class="fa-solid fa-caret-down iconcolorprimary"></i></a>
+                        <p id="zero_one">01</p>
+                        <div class="bannerline"></div>
+                        <p>06</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -115,7 +120,7 @@
             </div>
             
         </section>
-        <section class="about" id="about">
+        <section class="about">
            <div class="mainabout container">
             <div id="about1">
                 <img class="marginLeft" src="images/wall.jpg" alt="Wall image">
@@ -150,7 +155,7 @@
             </div>
            </div>
         </section>
-        <section class="feature" id="feature">
+        <section class="feature">
             <div class="mainfeature container">
                 <div class="marginLeft" id="feature1">
                     <div class="featureheading">
@@ -225,7 +230,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact" id="contact">
+        <section class="contact">
             <div class="footer container" id="footer1">
                 <h2>Subscribe to get the latest news about us</h2>
                 <p>We recomment you to subscribe to our newspaper, enter your email below to get our daily update about
