--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="heading">
                     <div class="headingline marginLeft"></div>
-                    <h2 class="h1heading">benefits you get when using our services</h2>
+                    <h2 class="h1heading">Benefits you get when using our services</h2>
                 </div>
                 <div class="marginLeft info marginRight">
                     <div class="infodetail" id="infodetail1">
