final commit after adding clearfix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Sreerag">
     <meta name="description" content="HTML/CSS Assignment 4">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML_CSS_Assignment_4</title>
@@ -12,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
+
 <body>
     <header>
         <nav class="nav container">
@@ -49,14 +48,13 @@
     </header>
     <main>
         <section class="home">
-            <div class="container">
+            <div class="mainbanner container">
                 <div class="bannerdiv marginRight" id="bannerimage">
                     <div class="bannerdiv " id="bannertext">
                         <h1>We help you make modern interior</h1>
-                        <p>We will help you to make on elegant and beautiful interior designed by professional interior designer
-                        </p>
+                        <p>We will help you to make on elegant and beautiful interior designed by professional interior
+                            designer</p>
                     </div>
-                    
                     <div id="emptybox"></div>
                     <div class="downarrow slideinright">
                         <a href="#"><i class="fa-solid fa-arrow-down iconcolor"></i></a>
@@ -113,48 +111,49 @@
                                 <h3>Warranty</h3>
                             </div>
                             <div class="insidedetail">
-                                <p>Every time you buy our furniture products, you will get a warranty without exception</p>
+                                <p>Every time you buy our furniture products, you will get a warranty without exception
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
+
         </section>
         <section class="about">
-           <div class="mainabout container">
-            <div id="about1">
-                <img class="marginLeft" src="images/wall.jpg" alt="Wall image">
+            <div class="mainabout container">
+                <div id="about1">
+                    <img class="marginLeft" src="images/wall.jpg" alt="Wall image">
+                </div>
+                <div id="about2">
+                    <div class="about2detail marginRight" id="aboutdetail1">
+                        <h2>We provide you the best experience</h2>
+                    </div>
+                    <div class="about2detail marginRight" id="aboutdetail2">
+                        <p>You dont worry avout result because all of these interors are made by people who are
+                            professionals in their fiels with an elegant and luxurious style and with premium quality
+                            materials. </p>
+                    </div>
+                    <div class="about2detail marginRight" id="aboutdetail3">
+                        <div class="numberdetail" id="numberdetail1">
+                            <h6>17</h6>
+                            <p>Years of experience</p>
+                        </div>
+                        <div class="numberdetail" id="numberdetail2">
+                            <h6>85</h6>
+                            <p>Award gained</p>
+                        </div>
+                        <div class="numberdetail" id="numberdetail3">
+                            <h6>537</h6>
+                            <p>Furnitures sold</p>
+                        </div>
+                    </div>
+                    <div class="about2detail marginRight" id="aboutdetail4">
+                        <a href="#">Learn more</a>
+                        <img src="images/right-arrow.png" alt="right arrow" class="btnarrow">
+                    </div>
+                </div>
             </div>
-            <div id="about2">
-                <div class="about2detail marginRight" id="aboutdetail1">
-                    <h2>We provide you the best experience</h2>
-                </div>
-                <div class="about2detail marginRight" id="aboutdetail2">
-                    <p>You dont worry avout result because all of these interors are made by people who are
-                        professionals in their fiels with an elegant and luxurious style and with premium quality
-                        materials. </p>
-                </div>
-                <div class="about2detail marginRight" id="aboutdetail3">
-                    <div class="numberdetail" id="numberdetail1">
-                        <h6>17</h6>
-                        <p>Years of experience</p>
-                    </div>
-                    <div class="numberdetail" id="numberdetail2">
-                        <h6>85</h6>
-                        <p>Award gained</p>
-                    </div>
-                    <div class="numberdetail" id="numberdetail3">
-                        <h6>537</h6>
-                        <p>Furnitures sold</p>
-                    </div>
-                </div>
-                <div class="about2detail marginRight" id="aboutdetail4">
-                    <a href="#">Learn more</a>
-                    <img src="images/right-arrow.png" alt="right arrow" class="btnarrow">
-                </div>
-            </div>
-           </div>
         </section>
         <section class="feature">
             <div class="mainfeature container">
@@ -168,19 +167,21 @@
                                 <h3>Briefing</h3>
                                 <p>First thing you determine the concept and model you want, then choose what color and
                                     materials you want to use in your furniture.</p>
-                            </div>     
+                            </div>
                         </div>
                         <div class=" time_line">
                             <div class="timeline_content">
                                 <h3>Processing</h3>
-                                <p>When the breiefing process is completed and what the client wants has been achieved. Then
-                                    we carry out the execution of the delivery concept.</p>   
+                                <p>When the breiefing process is completed and what the client wants has been achieved.
+                                    Then
+                                    we carry out the execution of the delivery concept.</p>
                             </div>
                         </div>
                         <div class=" time_line">
                             <div class="timeline_content">
                                 <h3>Finishing</h3>
-                                <p>After the process is completed, we will immediately carry out the finishing stage and we
+                                <p>After the process is completed, we will immediately carry out the finishing stage and
+                                    we
                                     do it carefully and make sure there are no mistake.</p>
                             </div>
                         </div>
@@ -236,53 +237,54 @@
                 <h2>Subscribe to get the latest news about us</h2>
                 <p>We recomment you to subscribe to our newspaper, enter your email below to get our daily update about
                     us.</p>
-                    <div class="subscribebtn">
-                        <input type="email" placeholder="Enter your email">
-                        <a href="#">Subscribe</a>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <div class="footer container" id="footer2">
-                <div class="footerdetail marginLeft" id="footerdetail1">
-                    <h4>Luxterior</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum accusantium ipsam neque
-                        commodi </p>
-                </div>
-                <div class="footerdetail" id="footerdetail2">
-                    <h5>About</h5>
-                    <a href="#">About us</a>
-                    <a href="#">Feature</a>
-                    <a href="#">News</a>
-                    <a href="#">Courses</a>
-                </div>
-                <div class="footerdetail" id="footerdetail3">
-                    <h5>Company</h5>
-                    <a href="#">Our comoany</a>
-                    <a href="#">Partner with us</a>
-                    <a href="#">FAQ</a>
-                    <a href="#">Slug</a>
-                </div>
-                <div class="footerdetail" id="footerdetail4">
-                    <h5>Support</h5>
-                    <a href="#">account</a>
-                    <a href="#">Feature</a>
-                    <a href="#">News</a>
-                    <a href="#">Courses</a>
-                    <a href="#">Accecibility</a>
-                </div>
-                <div class="footerdetail marginRight" id="footerdetail5">
-                    <h5>Get in touch</h5>
-                    <a href="#">About us</a>
-                    <a href="#">Feature</a>
-                    <div class="socialicons">
-                        <a href="#"><i class="fa-brands fa-instagram iconcolor"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook-f iconcolor"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter iconcolor"></i></a>
-                    </div>
+                <div class="subscribebtn">
+                    <input type="email" placeholder="Enter your email">
+                    <a href="#">Subscribe</a>
                 </div>
             </div>
-        </footer>
+        </section>
+    </main>
+    <footer>
+        <div class="footer container" id="footer2">
+            <div class="footerdetail marginLeft" id="footerdetail1">
+                <h4>Luxterior</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum accusantium ipsam neque
+                    commodi </p>
+            </div>
+            <div class="footerdetail" id="footerdetail2">
+                <h5>About</h5>
+                <a href="#">About us</a>
+                <a href="#">Feature</a>
+                <a href="#">News</a>
+                <a href="#">Courses</a>
+            </div>
+            <div class="footerdetail" id="footerdetail3">
+                <h5>Company</h5>
+                <a href="#">Our comoany</a>
+                <a href="#">Partner with us</a>
+                <a href="#">FAQ</a>
+                <a href="#">Slug</a>
+            </div>
+            <div class="footerdetail" id="footerdetail4">
+                <h5>Support</h5>
+                <a href="#">account</a>
+                <a href="#">Feature</a>
+                <a href="#">News</a>
+                <a href="#">Courses</a>
+                <a href="#">Accecibility</a>
+            </div>
+            <div class="footerdetail marginRight" id="footerdetail5">
+                <h5>Get in touch</h5>
+                <a href="#">About us</a>
+                <a href="">Feature</a>
+                <div class="socialicons">
+                    <a href="#"><i class="fa-brands fa-instagram iconcolor"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f iconcolor"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter iconcolor"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
